Crash in [@ mozilla::detail::RunnableMethodImpl<T>::~RunnableMethodImpl]
Categories
(Core :: Graphics: Canvas2D, defect, P1)
Tracking
()
People
(Reporter: bobowen, Assigned: bobowen)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-28ccdc4b-5ce9-463a-b2fa-0c7ba0200606.
Top 10 frames of crashing thread:
0 @0x7bf474
1 xul.dll mozilla::detail::RunnableMethodImpl<mozilla::layers::CanvasDrawEventRecorder*, void xpcom/threads/nsThreadUtils.h:1212
2 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1218
3 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:87
4 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
5 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
6 xul.dll nsBaseAppShell::Run widget/nsBaseAppShell.cpp:137
7 xul.dll nsAppShell::Run widget/windows/nsAppShell.cpp:430
8 xul.dll XRE_RunAppShell toolkit/xre/nsEmbedFunctions.cpp:913
9 xul.dll mozilla::ipc::MessagePumpForChildProcess::Run ipc/glue/MessagePump.cpp:237
| Assignee | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Comment 3•5 years ago
|
||
(In reply to [:philipp] from comment #2)
marking 78 as affected based on crash-stats data.
Ah, yeah, I wasn't quite sure what to do, the code causing this is only enabled for early Beta, so it will get disabled.
(Of course I should have at least added a comment to that effect.)
| Assignee | ||
Comment 4•5 years ago
|
||
| Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 9155065 [details]
Bug 1644208: Change RecordSourceSurfaceDestruction to take a void* not SourceSurface* to avoid AddRef during destructor. r=jrmuizel!
Beta/Release Uplift Approval Request
- User impact if declined: Users will continue to experience this crash and suspected related crashes up until Fx78b6, when the remote canvas will be disabled.
(It is only enabled in early Beta currently). - Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It is a very simple change that prevents an inadvertent AddRef/Release.
- String changes made/needed: None.
Comment 7•5 years ago
|
||
| bugherder | ||
Comment 8•5 years ago
|
||
Comment on attachment 9155065 [details]
Bug 1644208: Change RecordSourceSurfaceDestruction to take a void* not SourceSurface* to avoid AddRef during destructor. r=jrmuizel!
Fixes a remote canvas crash. Approved for 78.0b6.
Comment 9•5 years ago
|
||
| bugherder uplift | ||
Description
•