Bug 1644208: Change RecordSourceSurfaceDestruction to take a void* not SourceSurface* to avoid AddRef during destructor. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D78770